# clipod

./: .gitignore  Agents.md  DEMO.md  README.md  pyproject.toml  test_workflow.sh
src/clipod/: __init__.py  bgm.py  cli.py
src/clipod/commands/: __init__.py  bgm.py  export.py  mix.py  process.py  record.py  trim.py  web.py
src/clipod/web/: __init__.py  index.html  server.py
